--- a/.github/workflows/test-docker-cross.yml
+++ b/.github/workflows/test-docker-cross.yml
@@ -30,7 +30,13 @@ jobs:
         run: |
           export RUNTIME_CODE_SHASUM=`scripts/runtime-code-shasum.sh`
           echo "::set-output name=shasum::${RUNTIME_CODE_SHASUM}"
+          rustup install nightly-2021-02-20 --force
+          rustup default nightly-2021-02-20
+          rustup target add wasm32-unknown-unknown --toolchain nightly-2021-02-20
+          rustup component add --toolchain nightly-2021-02-20 clippy
+          export WASM_BUILD_TOOLCHAIN=nightly-2021-02-20
+          cargo update -p librocksdb-sys
           cargo install cross
-          cross build --target armv7-unknown-linux-gnueabihf --release
+          BUILD_DUMMY_WASM_BINARY=1 cross build --target armv7-unknown-linux-gnueabihf --release
           ls -al .
           ls -al target/
