--- a/.github/workflows/test-docker-cross.yml
+++ b/.github/workflows/test-docker-cross.yml
@@ -28,6 +28,7 @@ jobs:
       - id: compute_shasum
         name: Compute runtime code shasum
         run: |
+          sudo apt-get install -y clang llvm libc6-dev
           export RUNTIME_CODE_SHASUM=`scripts/runtime-code-shasum.sh`
           echo "::set-output name=shasum::${RUNTIME_CODE_SHASUM}"
           rustup install nightly-2021-02-20 --force
