--- a/.github/workflows/test-docker-cross.yml
+++ b/.github/workflows/test-docker-cross.yml
@@ -15,10 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '14.x'
-
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
@@ -33,27 +29,16 @@ jobs:
       - id: run_rustup_setup
         name: Rustup setup
         run: |
-          sudo apt-get update && sudo apt-get install -y curl git gcc xz-utils sudo pkg-config unzip clang llvm libc6-dev libclang-dev
-          export RUNTIME_CODE_SHASUM=`scripts/runtime-code-shasum.sh`
-          echo "::set-output name=shasum::${RUNTIME_CODE_SHASUM}"
           rustup install nightly-2021-02-20 --force
           rustup default nightly-2021-02-20
           rustup target add wasm32-unknown-unknown --toolchain nightly-2021-02-20
           rustup component add --toolchain nightly-2021-02-20 clippy
-          echo "Installed"
+          sudo apt-get update && sudo apt-get install -y curl git gcc xz-utils sudo pkg-config unzip clang llvm libc6-dev libclang-dev
 
       - uses: Swatinem/rust-cache@v1
-
-      - id: run_cargo_install
-        run: |
-          export WASM_BUILD_TOOLCHAIN=nightly-2021-02-20
-          cargo update -p librocksdb-sys
-          cargo install cross
 
       - id: compute_shasum
         name: Compute runtime code shasum
         run: |
           export WASM_BUILD_TOOLCHAIN=nightly-2021-02-20
-          BUILD_DUMMY_WASM_BINARY=1 cross build --target armv7-unknown-linux-gnueabihf --release
-          ls -al .
-          ls -al target/
+          BUILD_DUMMY_WASM_BINARY=1 cargo build --release
