--- a/.github/workflows/deploy-playground.yml
+++ b/.github/workflows/deploy-playground.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install Ansible dependencies
-        run: pipx inject ansible-core boto3 botocore
+      # - name: Install Ansible dependencies
+      #   run: pipx inject ansible-core boto3 botocore
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -55,47 +55,54 @@ jobs:
       - name: Check if CloudFormation stack exists
         id: stack_exists
         run: |
-          if aws cloudformation describe-stacks --stack-name ${{ env.STACK_NAME }} >/dev/null 2>/dev/null; then
+          if aws cloudformation describe-stacks --stack-name ${{ github.event.inputs.gitRepo }} >/dev/null 2>/dev/null; then
             echo "Stack already exists"
             exit 1
           else
             echo "Stack does not exist"
           fi
 
-      - name: Deploy to AWS CloudFormation
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        id: deploy_stack
-        with:
-          name: ${{ env.STACK_NAME }}
-          template: devops/aws/cloudformation/single-instance-docker.yml
-          no-fail-on-empty-changeset: '1'
-          parameter-overrides: 'KeyName=${{ github.event.inputs.keyName }},EC2InstanceType=${{ github.event.inputs.instanceType }}'
+      - name: Check if CloudFormation stack exists
+        id: echo_status
+        run: |
+          echo "hello world"
 
-      - name: Run playbook
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: deploy-playground-playbook.yml
-          directory: devops/aws
-          requirements: requirements.yml
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          inventory: |
-            [all]
-            ${{ steps.deploy_stack.outputs.PublicIp }}
-          options: |
-            --extra-vars "git_repo=${{ github.event.inputs.gitRepo }} \
-                          branch_name=${{ github.event.inputs.branchName }}"
+      # - name: Deploy to AWS CloudFormation
+      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+      #   id: deploy_stack
+      #   with:
+      #     name: ${{ env.STACK_NAME }}
+      #     template: devops/aws/cloudformation/single-instance-docker.yml
+      #     no-fail-on-empty-changeset: '1'
+      #     parameter-overrides: 'KeyName=${{ github.event.inputs.keyName }},EC2InstanceType=${{ github.event.inputs.instanceType }}'
 
-      - name: Save the endpoints file as an artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: endpoints
-          path: devops/aws/endpoints.txt
+      # - name: Run playbook
+      #   uses: dawidd6/action-ansible-playbook@v2
+      #   with:
+      #     playbook: deploy-playground-playbook.yml
+      #     directory: devops/aws
+      #     requirements: requirements.yml
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     inventory: |
+      #       [all]
+      #       ${{ steps.deploy_stack.outputs.PublicIp }}
+      #     options: |
+      #       --extra-vars "git_repo=${{ github.event.inputs.gitRepo }} \
+      #                     branch_name=${{ github.event.inputs.branchName }}"
+
+      # - name: Save the endpoints file as an artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: endpoints
+      #     path: devops/aws/endpoints.txt
 
       - name: Delete CloudFormation Stack if any step failed
         # Skip if stack already existed
         if: failure() && steps.stack_exists.outcome != 'failed'
         run: |
-          echo "Deleting ${{ env.STACK_NAME }} stack"
-          aws cloudformation delete-stack --stack-name ${{ env.STACK_NAME }}
-          echo "Waiting for ${{ env.STACK_NAME }} to be deleted..."
-          aws cloudformation wait stack-delete-complete --stack-name ${{ env.STACK_NAME }}
+          echo ${{ steps.stack_exists.outcome }}
+          echo "In delete world"
+          # echo "Deleting ${{ env.STACK_NAME }} stack"
+          # aws cloudformation delete-stack --stack-name ${{ env.STACK_NAME }}
+          # echo "Waiting for ${{ env.STACK_NAME }} to be deleted..."
+          # aws cloudformation wait stack-delete-complete --stack-name ${{ env.STACK_NAME }}
